// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component test should render without crash with props 1`] = `
<div
  className="container containerCLass"
/>
`;

exports[`Container component test should render without crash without props 1`] = `
<div
  className="container "
/>
`;
